# dev-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile.webhook  Dockerfile.worker  README.md  contex.md  docker-compose.prod.yml  pyproject.toml
.github/workflows/: deploy-lightsail.yml  deploy.yml
config/: agents.yaml  limits.yaml  mcp_servers.yaml  repositories.yaml  skills.yaml
docs/: MCP_CONNECTIONS.md  SETUP_AND_DEPLOYMENT.md  improvement.md
infra/lightsail/: main.tf  outputs.tf  terraform.tfvars  user-data.sh  variables.tf  versions.tf
infra/tofu/: main.tf  outputs.tf  variables.tf  versions.tf
scripts/: deploy-lightsail.sh  deploy.sh  setup-aws.sh
src/: settings.py
src/agents/: base.py  bedrock_client.py  claude_sdk_client.py  communication.py  orchestrator.py  registry.py  worker.py
src/handlers/: manual_trigger.py  webhook_handler.py  webhook_models.py  webhook_server.py
src/integrations/: __init__.py  mcp_manager.py
src/memory/: __init__.py  client.py  config.py  episodic.py  semantic.py  short_term.py
src/prompts/: orchestrator_system.md  plan_template.md  worker_system.md
src/repositories/: env_manager.py  environment.py  hosts.py  registry.py  router.py  workspace.py
src/resilience/: circuit_breaker.py  graceful_shutdown.py  rate_limiter.py
src/runtime/: entrypoint.py  health.py
src/schemas/: __init__.py  atlassian.py  figma.py  github.py  message.py  plan.py  playwright.py  repository.py  scm.py  skill.py  slack.py  task.py  teams.py
src/security/: audit_log.py  input_sanitizer.py
src/skills/: composer.py  (+2 more)
(+88 files in other folders)
